--- a/cofunding/cofunding-ear/.settings/org.eclipse.wst.common.component
+++ b/cofunding/cofunding-ear/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,12 @@
         <dependent-module archiveName="cofunding-web.war" deploy-path="/" handle="module:/resource/cofunding-web/cofunding-web">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="javax.mail.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/com/sun/mail/javax.mail/1.6.1/javax.mail-1.6.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="activation.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="primefaces.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/primefaces/primefaces/5.1/primefaces-5.1.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
